[package]
name = "fam"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ff = "0.13"
group = "0.13"
rayon = "1.7.0"
serde = { version = "1.0.160", features = ["derive"] }
halo2curves = { git = 'https://github.com/privacy-scaling-explorations/halo2curves', tag = "0.3.2" }

[dev-dependencies]
rand = "0.8.5"

[build-dependencies]
cc = "1.0.82"
# cmake = "0.1.50"

[features]
cuda = []
default = ["cuda"]
