[package]
name = "fam"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ff = "0.12"
group = "0.12"
rayon = "1.7.0"
serde = { version = "1.0.160", features = ["derive"] }
halo2curves = { git = 'https://github.com/scroll-tech/halo2curves', branch = "0.3.1-derive-serde" }

[dev-dependencies]
rand = "0.8.5"

[build-dependencies]
cc = "1.0.82"
# cmake = "0.1.50"

[features]
cuda = []
profile = []
default = []
